🐛 bug in link on index.html

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
     <div>
         <h1>Welcome to abollinger\bricolo</h1>
         <p>If you can read this, it means that the serve method worked!</p>
-        <p>For a guide check out the <a ref="https://github.com/Antoine-Bollinger/bricolo">documentation</a>.</p>
+        <p>For a guide check out the <a href="https://github.com/Antoine-Bollinger/bricolo">documentation</a> on <img
+                src="./github.svg" height="15" />.</p>
     </div>
 </body>
 
