--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon.ico" />
     <title>abollinger\bricolo</title>
     <style>
         * {
@@ -25,6 +26,10 @@
             align-items: center;
         }
 
+        section {
+            max-width: 1000px;
+        }
+
         h1 {
             color: #4F5B93;
         }
@@ -32,12 +37,13 @@
 </head>
 
 <body>
-    <div>
+    <section>
         <h1>Welcome to abollinger\bricolo</h1>
+        <br>
         <p>If you can read this, it means that the serve method worked!</p>
         <p>For a guide check out the <a href="https://github.com/Antoine-Bollinger/bricolo">documentation</a> on <img
                 src="./github.svg" height="15" />.</p>
-    </div>
+    </section>
 </body>
 
 </html>
